--- a/biocarb21/static/css/style.css
+++ b/biocarb21/static/css/style.css
@@ -1,21 +1,16 @@
-@font-face { font-family: Poppins; font-weight: 900; src: url('./font/Poppins-Black.otf'); }
-@font-face { font-family: Poppins; font-weight: 800; src: url('./font/Poppins-ExtraBold.otf'); }
+
 @font-face { font-family: Poppins; font-weight: 700; src: url('./font/Poppins-Bold.otf'); } 
-@font-face { font-family: Poppins; font-weight: 600; src: url('./font/Poppins-SemiBold.otf'); }
 @font-face { font-family: Poppins; font-weight: 500; src: url('./font/Poppins-Medium.otf'); }  
 @font-face { font-family: Poppins; font-weight: 400; src: url('./font/Poppins-Regular.otf'); }
 @font-face { font-family: Poppins; font-weight: 300; src: url('./font/Poppins-Light.otf'); } 
-@font-face { font-family: Poppins; font-weight: 200; src: url('./font/Poppins-ExtraLight.otf'); }
-@font-face { font-family: Poppins; font-weight: 100; src: url('./font/Poppins-Thin.otf'); }  
+@font-face { font-family: Museo Sans; font-weight: 700; src: url('./font/MuseoSans_700.otf'); }
+@font-face { font-family: Museo Sans; font-weight: 400; src: url('./font/MuseoSans_400.otf'); }
+@font-face { font-family: Museo Sans; font-weight: 300; src: url('./font/MuseoSans_300.otf'); }
+
 
 html, body {
     height: 100%;
     margin: 0;
-    font-family: 'Poppins';
-}
-
-.input-azul{
-    border-color:#90b2ba;
 }
 
 .input-verde:focus {
@@ -34,5 +29,5 @@ html, body {
 }
 
 .border-radius {
-    border-radius: 9px;
+    border-radius: 5px;
 }
