--- a/biocarb21/templates/biocarb21/registrate-2.html
+++ b/biocarb21/templates/biocarb21/registrate-2.html
@@ -1,83 +1,146 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrate</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="./assets/css/style.css"> -->
     <link rel="stylesheet" href="{% static '/css/style.css' %}">
     <style>
         .fondo {
-            /* background: url(./assets/img/FONDO\ PANTALLA\ 2.png); */
-            background: url("{% static '/img/FONDO PANTALLA 2.png' %}");
-            background-size: cover;
-            background-position: bottom;
-            height: 100%;
-            min-height: 630px;
+            background: #04562b;
+            min-height: 812px;
         }
+
         .div {
-            width: 50%;
+            width: 80%;
             height: 100%;
         }
+
         .div-fondo-form {
-            min-height: 450px;
+            margin: 5% 0;
+            padding: 5% 0;
             background: rgba(0, 0, 0, 0.2);
             border-radius: 30px;
         }
+
         .div-form {
             width: 80%;
         }
+
         .texto {
-            font-size: 12px; 
-            line-height: 1; 
-            text-align: justify;
-        }
-        .checkbox-acepto {
-            width:max-content;
+            font-family: 'Museo Sans';
+            font-size: 12px;
+            line-height: 1;
         }
 
-        @media (max-width:1200px) {
+        .checkbox-acepto {
+            width: max-content;
+        }
+
+        input,
+        ::placeholder {
+            color: #04562b !important;
+        }
+
+        .titulo {
+            font-size: 21px;
+        }
+
+        .acepto {
+            font-size: 14px;
+        }
+
+        .ilustracion-top {
+            top: 10%;
+            right: 5%;
+            /* background: url(./assets/img/ilustracion-top.png); */
+            background: url("{% static '/img/ilustracion-top.png' %}");
+            background-repeat: no-repeat;
+            background-position: top right;
+            background-size: 30%;
+            width: 100%;
+            height: 50%;
+            z-index: 1;
+        }
+
+        .ilustracion-bottom {
+            bottom: 0;
+            /* background: url(./assets/img/ilustracion-bottom.png); */
+            background: url("{% static '/img/ilustracion-bottom.png' %}");
+            background-repeat: no-repeat;
+            background-position: bottom;
+            background-size: 100%;
+            width: 100%;
+            height: 100%;
+            z-index: 1;
+        }
+
+        /* // Small devices (landscape phones, 576px and up) */
+        @media (min-width: 576px) {
+            .titulo {
+                font-size: 28px;
+            }
+
+            .acepto {
+                font-size: 16px;
+            }
+
+            .fondo {
+                height: inherit;
+            }
+        }
+
+        /* // Medium devices (tablets, 768px and up) */
+        @media (min-width: 768px) {
+            .fondo {
+                min-height: 600px;
+                height: 100%;
+            }
+
+            .div {
+                width: 70%;
+            }
+
+            .titulo {
+                font-size: 31px;
+            }
+
+            .acepto {
+                font-size: 18px;
+            }
+
+            .ilustracion-top {
+                background-size: 30%;
+                width: 50%;
+                height: 50%;
+            }
+        }
+
+        /* // Large devices (desktops, 992px and up) */
+        @media (min-width: 992px) {
+            .fondo {
+                height: 100%;
+            }
+
+            .titulo {
+                font-size: 36px;
+            }
+
             .div {
                 width: 60%;
             }
         }
-       
-        @media (max-width:992px) {
-            .div {
-                width: 70%;
-            }
-        }
-        
-        @media (max-width:768px) {
-            .fondo {
-                min-height: 800px;
-            }
-            .div {
-                width: 80%;
-            }
-            .div-fondo-form {
-                padding: 30px 0;
-            }
-        }
 
-        @media (max-width:576px) {
-            .titulo {
-                font-size: 24px;
-            }
-        }
-
-        @media (max-width:360px) {
+        /* // Extra large devices (large desktops, 1200px and up) */
+        @media (min-width: 1200px) {
             .div {
-                width: 90%;
-            }
-            .titulo {
-                font-size: 21px;
-            }
-            label {
-                font-size: 14px;
+                width: 50%;
             }
         }
     </style>
@@ -85,94 +148,133 @@
 
 <body>
 
-    <div class="fondo">
-        <div class="d-flex flex-column align-items-center justify-content-center mx-auto div">
-            <div class="div-titulo">
-                <h2 class="h2 text-white font-weight-bold titulo">Continua con tu registro</h2>
-            </div>
+    <div class="fondo position-relative d-flex align-items-center">
+        <div class="position-absolute ilustracion-top"></div>
+        <div class="position-absolute ilustracion-bottom"></div>
 
-            <div class="d-flex align-items-center justify-content-center div-fondo-form">
-                <div class="div-form">
-                    <form action="" method="POST">
-                        <!-- Estoy trabajando en capturar el value del nombre, email y teléfono del primer form y pasarlos a este form que es completo-->
-                        {% csrf_token %} 
+        <div class="d-flex align-items-center">
+            <div class="d-flex flex-column align-items-center justify-content-center mx-auto div">
+                <div class="d-flex align-items-center justify-content-center div-fondo-form">
+                    <div class="div-form" style="z-index: 10;">
+                        <h2 class="h2 pb-3 text-center text-white font-weight-bold titulo">Continua con tu registro</h2>
+                        <form action="" method="POST">
+                            {% csrf_token %} 
+                            <!-- <div class="d-none form-group">
+                                <div class="form-group form-input">
+                                    <input type="text" name="nombre" id="nombre"
+                                        class="form-control border-radius input-verde" placeholder="Nombre completo:">
+                                </div>
 
-                        <div class="form-row">
-                            <div class="col-md-6">
-<!--                                 <input type="text" name="fecha-nacimiento" id="fecha-nacimiento" class="form-control mb-3 input-verde"
-                                    placeholder="Fecha de nacimiento:" onfocus="(this.type='date')"> -->
-                                    {{ form.fecha_nacimiento }}
+                                <div class="form-row">
+                                    <div class="col-md-6 form-input">
+                                        <input type="email" name="email" id="email"
+                                            class="form-control border-radius input-verde" placeholder="Email:">
+                                    </div>
+                                    <div class="col-md-6">
+                                        <input type="tel" name="telefono" id="telefono"
+                                            class="form-control border-radius input-verde" placeholder="Teléfono:">
+                                    </div>
+                                </div>
+                            </div> -->
+
+                            <div class="form-row">
+                                <div class="col-md-6">
+                                    <!-- <input type="text" name="fecha-nacimiento" id="fecha-nacimiento"
+                                        class="form-control mb-3 input-verde" placeholder="Fecha de nacimiento:"
+                                        onfocus="(this.type='date')"> -->
+                                        {{ form.fecha_nacimiento }}
+                                </div>
+                                <div class="col-md-6">
+                                    <!-- <input type="text" name="genero" id="genero" class="form-control mb-3 input-verde"
+                                        placeholder="Género:" required> -->
+                                        {{ form.genero }}
+                                </div>
                             </div>
-                            <div class="col-md-6">
-<!--                                 <input type="text" name="genero" id="genero" class="form-control mb-3 input-verde"
-                                    placeholder="Género:"> -->
-                                    {{ form.genero }}
+
+                            <div class="form-row">
+                                <div class="col-md-6">
+                                    <!-- <input type="text" name="entidad" id="entidad" class="form-control mb-3 input-verde"
+                                        placeholder="Entidad/Organización:" required> -->
+                                        {{ form.entidad_organizacion}}
+                                </div>
+                                <div class="col-md-6">
+                                    <!-- <input type="text" name="cargo" id="cargo" class="form-control mb-3 input-verde"
+                                        placeholder="Cargo:" required> -->
+                                        {{ form.cargo}}
+
+                                </div>
                             </div>
-                        </div>
 
-                        <div class="form-row">
-                            <div class="col-md-6">
-<!--                                 <input type="text" name="entidad" id="entidad" class="form-control mb-3 input-verde"
-                                    placeholder="Entidad/Organización:"> -->
-                                    {{ form.entidad_organizacion}}
+                            <div class="form-row">
+                                <div class="col-md-6">
+                                    <!-- <input type="text" name="departamento" id="departamento"
+                                        class="form-control mb-3 input-verde" placeholder="Departamento:" required> -->
+                                        {{ form.departamento}}
+                                </div>
+                                <div class="col-md-6">
+                                    <!-- <input type="text" name="municipio" id="municipio"
+                                        class="form-control mb-3 input-verde" placeholder="Municipio:" required> -->
+                                        {{ form.municipio}}
+                                </div>
                             </div>
-                            <div class="col-md-6">
-<!--                                 <input type="text" name="cargo" id="cargo" class="form-control mb-3 input-verde"
-                                    placeholder="Cargo:"> -->
-                                    {{ form.cargo}}
+
+                            <p class="text-white texto">
+                                <b>Continua con tu registro:</b><br>
+                                Las personas registradas entregan su información de manera libre y voluntaría y
+                                autorizan de
+                                manera expresa e irrevocable al Programa Riquezas Natural y/o a quíen éste
+                                subcontratante
+                                para que consulte, solicite, suministre, reporte, procese, obtenga, recolecte,
+                                intercambie,
+                                emplee, envíe, estudie, conserve, reciba y analice sus datos personales en el marco de
+                                implementación del Programa Riqueza Natural, conforme a lo dispuesto por la Ley.
+                            </p>
+
+                            <div class="mx-auto mb-3 checkbox-acepto">
+                                <input type="checkbox" id="acepto" name="acepto" value="acepto" required>
+                                <label for="acepto" class="text-white acepto">Acepto términos y condiciones</label><br>
 
                             </div>
-                        </div>
 
-                        <div class="form-row">
-                            <div class="col-md-6">
-<!--                                 <input type="text" name="departamento" id="departamento" class="form-control mb-3 input-verde"
-                                    placeholder="Departamento:"> -->
-                                    {{ form.departamento}}
-
+                            <div class="mx-auto text-center">
+                                <!-- <button type="button" class="btn mt-2 px-4 boton-rojo border-radius"
+                                    onclick="window.location.href='./registrate-exito.html';">
+                                    Registrarse
+                                </button> -->
+                                <button  class="btn mt-2 px-4 boton-rojo border-radius">
+                                    Registrarse
+                                </button>
                             </div>
-                            <div class="col-md-6">
-<!--                                 <input type="text" name="municipio" id="municipio" class="form-control mb-3 input-verde"
-                                    placeholder="Municipio:"> -->
-                                    {{ form.municipio}}
-
-                            </div>
-                        </div>
-
-                        <p class="text-white texto">
-                            <b>Continua con tu registro:</b><br>
-                            Las personas registradas entregan su información de manera libre y voluntaría y autorizan de
-                            manera expresa e irrevocable al Programa Riquezas Natural y/o a quíen éste subcontratante
-                            para que consulte, solicite, suministre, reporte, procese, obtenga, recolecte, intercambie,
-                            emplee, envíe, estudie, conserve, reciba y analice sus datos personales en el marco de
-                            implementación del Programa Riqueza Natural, conforme a lo dispuesto por la Ley.
-                        </p>
-
-                        <div class="mx-auto mb-3 checkbox-acepto">
-                            <input type="checkbox" id="acepto" name="acepto" value="acepto" required>
-                            <label for="acepto" class="text-white">Acepto términos y condiciones</label><br>
-                        </div>
-
-                        <div class="mx-auto text-center">
-<!--                             <button type="button" class="btn mt-2 px-4 boton-rojo border-radius"
-                                onclick="window.location.href='./registrate-exito.html'">
-                                Registrarse
-                            </button> -->
-                            <button  class="btn mt-2 px-4 boton-rojo border-radius">
-                                Registrarse
-                            </button>
-                        </div>
-                    </form>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
+
+
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <!-- <script src="./assets/js/funciones.js"></script> -->
+<!--     <script>
+        $(document).ready(function () {
+            const formValues = new URLSearchParams(location.search);
+            nombreValue = formValues.get('nombre');
+            emailValue = formValues.get('email');
+            telefonoValue = formValues.get('telefono');
+            document.getElementById('nombre').value = nombreValue;
+            document.getElementById('email').value = emailValue;
+            document.getElementById('telefono').value = telefonoValue;
+        })
+    </script> -->
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-    
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous">
+    </script>
+
 </body>
 
 </html>
