--- a/biocarb21/templates/biocarb21/registrate-exito.html
+++ b/biocarb21/templates/biocarb21/registrate-exito.html
@@ -1,124 +1,186 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrate</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="./assets/css/style.css"> -->
     <link rel="stylesheet" href="{% static '/css/style.css' %}">
     <style>
         .fondo {
-            /* background: url(./assets/img/FONDO\ PANTALLA\ 2.png);  */
-            background: url("{% static '/img/FONDO PANTALLA 2.png' %}");
-            background-size: cover; 
-            background-position: bottom; 
-            height:100%; 
-            min-height: 520px;
+            background: #04562b;
+            height: 100%;
+            min-height: 460px;
         }
+
         .div {
             height: 100%;
         }
+
         .div-fondo-form {
-            width: 50%; 
-            min-height: 400px; 
-            background: rgba(0, 0, 0, 0.2); 
+            width: 90%;
+            background: rgba(0, 0, 0, 0.2);
             border-radius: 30px;
+            z-index: 10;
         }
+
         .div-form {
             width: 80%;
         }
-        .link, .link:hover {
-            text-decoration: none; 
-            color: green; 
+
+        .ilustracion-top {
+            top: 10%;
+            right: 5%;
+            /* background: url(./assets/img/ilustracion-top.png); */
+            background: url("{% static '/img/ilustracion-top.png' %}");
+            background-repeat: no-repeat;
+            background-position: top right;
+            background-size: 30%;
+            width: 100%;
+            height: 50%;
+            z-index: 1;
+        }
+
+        .ilustracion-bottom {
+            bottom: 0;
+            /* background: url(./assets/img/ilustracion-bottom.png); */
+            background: url("{% static '/img/ilustracion-bottom.png' %}");
+            background-repeat: no-repeat;
+            background-position: bottom;
+            background-size: 100%;
+            width: 100%;
+            height: 100%;
+            z-index: 1;
+        }
+
+        .titulo {
+            font-size: 28px;
+        }
+
+        .texto-primario {
+            font-weight: 500;
+            color: #b3ff50;
             font-size: 18px;
         }
 
-        @media (max-width:1200px) {
-            .div-fondo-form {
-                width: 60%;
-            }
+        .texto {
+            font-size: 14px;
+            font-weight: 500;
         }
-       
-        @media (max-width:992px) {
-            .div-fondo-form {
-                width: 75%;
-            }
+
+        .boton-rojo,
+        .boton-rojo:hover {
+            font-size: 16px;
         }
-        
-        @media (max-width:768px) {
+
+        /* // Small devices (landscape phones, 576px and up) */
+        @media (min-width: 576px) {
             .div-fondo-form {
-                padding: 30px 0;
-                width: 80%;
+                width: 70%;
             }
+
             .titulo {
                 font-size: 31px;
             }
-            .texto-primario {
-                font-size: 18px;
-            }
-        }
 
-        @media (max-width:576px) {
-            .div-fondo-form {
-                width: 90%;
-            }
-            .boton-rojo {
-                font-size: 12px;
-            }
-            .titulo {
-                font-size: 24px;
-            }
             .texto-primario {
+                font-size: 21px;
+            }
+
+            .texto {
                 font-size: 16px;
             }
+        }
+
+        /* // Medium devices (tablets, 768px and up) */
+        @media (min-width: 768px) {
+            .div-fondo-form {
+                width: 60%;
+            }
+
+            .titulo {
+                font-size: 36px;
+            }
+
+            .texto-primario {
+                font-size: 21px;
+            }
+
             .texto {
-                font-size: 13px;
+                font-size: 18px;
+            }
+
+            .boton-rojo,
+            .boton-rojo:hover {
+                font-size: 18px;
+            }
+
+            .ilustracion-top {
+                background-size: 30%;
+                width: 50%;
+                height: 50%;
             }
         }
 
-        @media (max-width:360px) {
-            label {
-                font-size: 14px;
+        /* // Large devices (desktops, 992px and up) */
+        @media (min-width: 992px) {
+            .fondo {
+                height: 100%;
             }
+
+            .div-fondo-form {
+                width: 50%;
+            }
+
             .titulo {
-                font-size: 18px;
+                font-size: 36px;
             }
         }
+
+        /* // Extra large devices (large desktops, 1200px and up) */
+        @media (min-width: 1200px) {}
     </style>
 </head>
 
 <body>
-    <div class="fondo">
+    <div class="fondo position-relative d-flex align-items-center">
+        <div class="position-absolute ilustracion-top"></div>
+        <div class="position-absolute ilustracion-bottom"></div>
+
         <div class="d-flex align-items-center justify-content-center mx-auto div">
-            <div class="d-flex align-items-center justify-content-center div-fondo-form">
+            <div class="d-flex py-5 align-items-center justify-content-center div-fondo-form">
                 <div class="div-form text-center">
-                    <h2 class="h1 text-white font-weight-bold titulo">Su registro fue exitoso</h2>
-                    <p class="h5 text-white font-weight-light texto-primario">A tu correo se envió el link de ingreso<br>al evento, gracias por tu registro</p>
-                    
-                    <div class="mx-auto py-3">
-                        <a href="" class="link">Haz clic aquí sino has recibido el correo</a>
-                    </div>
-                    
-                    <p class="text-white texto">El objetivo fundamental de este evento es evidenciar de que manera los propietarios de bosques venden sus bonos de carbonos mediante la conservación de la biodiversidad.</p>
+                    <h2 class="text-white font-weight-bold titulo">Su registro fue exitoso</h2>
+                    <p class="pb-4 texto-primario">A tu correo se envió el link de ingreso<br>al evento, gracias por tu
+                        registro</p>
+
+                    <p class="text-white texto">Sabías que el <b>proyecto CO2BIO ha removido más de 2.000.000 de
+                            Toneladas de CO2</b> validadas y certificadas, gracias a las actividades de conservación y
+                        restauración en bosques de 40 propietarios en la Orinoquia Colombia, actividades que son
+                        soportadas por la venta de bonos de carbono.</p>
 
                     <div class="mx-auto">
-                        <button type="button" class="btn mt-2 px-4 boton-rojo border-radius"
-                            onclick="window.location.href='./comprar.html'">
+                        <button type="button" class="btn mt-2 px-4 boton-rojo border-radius">
                             Quiero comprar un bono de carbono
                         </button>
-                    </div>    
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-    
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous">
+    </script>
+
 </body>
 
 </html>
