--- a/biocarb21/templates/biocarb21/registrate.html
+++ b/biocarb21/templates/biocarb21/registrate.html
@@ -1,159 +1,291 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrate</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="./assets/css/style.css"> -->
     <link rel="stylesheet" href="{% static '/css/style.css' %}">
     <style>
         .fondo {
-            /* background: url(./assets/img/FONDO\ PANTALLA\ 1.png); */ 
-            background: url("{% static '/img/FONDO PANTALLA 1.png' %}");
-            background-size: cover; 
-            height:100%; 
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            /* background: url(./assets/img/bg-1.png); */
+            background: url("{% static '/img/bg-1.png' %}");
+            background-size: cover;
+            height: 100%;
             min-height: 600px;
-        }
-        .div-fondo-form {
-            width: 65%; 
-            min-height: 100%; 
-            /* background-image: url(./assets/img/FORMULARIO\ PANTALLA\ 1-1.png);  */
-            background-image: url("{% static '/img/FORMULARIO PANTALLA 1-1.png' %}");
-            background-position: center; 
-            background-size: contain; 
-            background-repeat: no-repeat;
-        }
-        .div-form {
-            width: min-content;
-        }
-        .titulo-form {
-            color: #042c24; 
-            font-size: 51px;
-        }
-        
-        @media (max-width:1200px) {
-            .titulo-form {
-                font-size: 41px;
-            }
-        }
-       
-        @media (max-width:992px) {
-           .titulo-form {
-                font-size: 36px;
-            }
-            .div-fondo-form {
-                width: 80%;
-            } 
-        }
-        
-        @media (max-width:768px) {
-            .form-input {
-                margin-bottom: 1rem;
-            }
-            .form-control {
-                font-size: 0.9rem;
-            }
-            .titulo-form {
-                font-size: 28px;
-                margin: 8px 20px;
-            }
-            .div-fondo-form {
-                width: 95%;
-            }
-            .boton-rojo { 
-                margin-top: 10px !important;
-                font-size: 0.9rem;
-            }
+            color: white;
         }
 
-        @media (max-width:576px) {
-            .form-input {
-                margin-bottom: 8px;
+        input,
+        ::placeholder {
+            color: #042b24 !important;
+        }
+
+        .div {
+            background: rgba(255, 255, 255, 0.2);
+            height: 85%;
+            width: 85%;
+            border-radius: 20px 20px 0 0;
+            max-height: 600px;
+        }
+
+        .div-bottom {
+            background: #042b24;
+            width: 85%;
+            border-radius: 0 0 20px 20px;
+        }
+
+        .div-bg-bottom {
+            z-index: 1;
+            bottom: -1px;
+            /* background: url(./assets/img/bg-div-1.png); */
+            background: url("{% static '/img/bg-div-1.png' %}");
+            background-position: bottom;
+            background-repeat: no-repeat;
+            background-size: 100%;
+            height: 100%;
+            width: 100%;
+        }
+
+        .no-flex {
+            display: block !important;
+        }
+
+        .titulo-top {
+            padding: 4% 6%;
+        }
+
+        .titulo-foro {
+            font-size: 28px;
+            text-align: center;
+        }
+
+        .span-titulo-foro {
+            font-size: 55px;
+        }
+
+        .titulo {
+            color: #042b24;
+            font-size: 36px;
+            padding-bottom: 6%;
+        }
+
+        /* // Small devices (landscape phones, 576px and up) */
+        @media (min-width: 576px) {
+            .fondo {
+                min-height: 600px;
             }
-            input {
-                height: 30px !important;
+
+            .div,
+            .div-bottom {
+                width: 85%;
             }
-            .div-form {
-                padding-top: 30px;
-                margin-right: -23px;
+
+            .div {
+                height: 65%;
+                max-height: 450px;
             }
-            .titulo-form {
-                color: #042c24; 
-                font-size: 21px;
-                margin-left: 20px;
-                margin-right: 20px;
+
+            .titulo {
+                font-size: 33px;
             }
-            .div-fondo-form {
-                width: 100%;
+
+            .titulo-top {
+                padding-right: 6%;
+                margin-top: 3%;
             }
-            .boton-rojo { 
-                margin-top: 10px !important;
+
+            .titulo-foro {
+                font-size: 28px;
+                padding-left: 6%;
+                text-align: left;
+            }
+
+            .span-titulo-foro {
+                font-size: 55px;
+            }
+
+            .no-flex {
+                display: flex !important;
+            }
+
+            .div-bottom {
                 font-size: 14px;
             }
         }
 
-        @media (max-width:375px) {
-            input {
-                height: 23px !important;
+        /* // Medium devices (tablets, 768px and up) */
+        @media (min-width: 768px) {
+
+            .div,
+            .div-bottom {
+                width: 85%;
             }
-            .titulo-form {
-                color: #042c24; 
-                font-size: 16px;
-                margin-left: 5px;
-                margin-right: 5px;
+
+            .titulo {
+                font-size: 41px;
             }
-            .div-fondo-form {
-                width: 100%;
+
+            .titulo-top {
+                margin-top: 0;
             }
-            .boton-rojo { 
-                margin-top: 10px !important;
-                font-size: 12px;
-                padding: 3px 15px;
+
+            .titulo-foro {
+                font-size: 35px;
+                padding-left: 10%;
+            }
+
+            .span-titulo-foro {
+                font-size: 63px;
+            }
+
+            .no-flex {
+                display: flex !important;
+            }
+
+            .div-bottom {
+                font-size: 18px;
             }
         }
-    </style>    
+
+        /* // Large devices (desktops, 992px and up) */
+        @media (min-width: 992px) {
+            .div {
+                width: 75%;
+            }
+
+            .div-bottom {
+                width: 75%;
+            }
+
+            .titulo-foro {
+                font-size: 40px;
+            }
+
+            .span-titulo-foro {
+                font-size: 68px;
+            }
+
+            .titulo {
+                font-size: 50px;
+            }
+
+            .titulo-top {
+                padding-top: 9%;
+            }
+        }
+
+        /* // Extra large devices (large desktops, 1200px and up) */
+        @media (min-width: 1200px) {
+            .div {
+                width: 70%;
+            }
+
+            .div-bottom {
+                width: 70%;
+            }
+
+            .titulo-foro {
+                font-size: 45px;
+            }
+
+            .span-titulo-foro {
+                font-size: 73px;
+            }
+
+            .titulo {
+                font-size: 55px;
+            }
+        }
+    </style>
 </head>
 
 <body>
-    <div class="fondo d-flex justify-content-center">    
-        <div class="d-flex justify-content-end align-items-center pr-5 pb-5 div-fondo-form">          
-            <div class="div-form">
-                <h2 class="font-weight-bold px-3 pb-md-3 titulo-form">REGISTRATE</h2>
-                <form action="" method="POST"> 
-                    {% csrf_token %} 
-                    <div class="form-group form-input">
-                        <input type="text" name="nombre" id="nombre" class="form-control border-radius input-verde" placeholder="Nombre completo:">
-                        <!-- {{ form.nombre }} -->
-                    </div>
+    <div class="fondo d-flex">
+        <div class="position-relative div">
+            <div class="d-flex no-flex">
+                <div class="pt-4 col-sm-6" style="z-index: 10;">
+                    <h2 class="pt-3 font-weight-bold titulo-foro"><span class="span-titulo-foro">II
+                            Foro</span><br>Biodiversidad<br>y Carbono</h2>
+                </div>
 
-                    <div class="form-row">
-                        <div class="col-md-6 form-input">
-                            <input type="email" name="email" id="email" class="form-control border-radius input-verde" placeholder="Email:">
-                            <!-- {{ form.email }}  -->
+                <div class="text-center col-sm-6 titulo-top" style="z-index: 10;">
+                    <h2 class="font-weight-bold pr-2 titulo">REGISTRATE</h2>
+
+                    <form action="" method="POST"> 
+                        {% csrf_token %} 
+                        <div class="form-group form-input">
+                            <input type="text" name="nombre" id="nombre" class="form-control border-radius input-verde"
+                                placeholder="Nombre completo:" required>
                         </div>
-                        <div class="col-md-6">
-                            <input type="tel" name="telefono" id="telefono" class="form-control border-radius input-verde" placeholder="Teléfono:">
-                            <!-- {{ form.telefono}} -->
+
+                        <div class="form-row">
+                            <div class="col-lg-6 form-group form-input">
+                                <input type="email" name="email" id="email"
+                                    class="form-control border-radius input-verde" placeholder="Email:" required>
+                            </div>
+
+                            <div class="col-lg-6 form-group">
+                                <input type="tel" name="telefono" id="telefono"
+                                    class="form-control border-radius input-verde" placeholder="Teléfono:" required>
+                            </div>
                         </div>
-                    </div>
-                    
-                    <div class="text-center"><!-- type="button"   onclick="guardarData();"-->
-                        <button class="btn mt-4 px-4 boton-rojo border-radius">
-                            Siguiente
-                        </button>
-                    </div>   
-                </form>
-                </div>                
+
+                        <div class="text-center">
+                            <button  class="btn mt-4 px-4 boton-rojo border-radius"
+                               ><!--  onclick="guardarData();" -->
+                                Siguiente
+                            </button>
+                        </div>
+                    </form>
+
+                </div>
+
+            </div>
+
+            <div class="position-absolute div-bg-bottom">
+
             </div>
         </div>
-    </div> 
-    <!-- <script src="./assets/js/funciones.js"></script> -->
+        <div class="d-flex justify-content-center text-center font-weight-bold div-bottom">
+            <p style="margin-top: 1rem;">Día del evento: <span style="color: #b3ff50;">22 de abril, Día internacional de
+                    la tierra</span></p>
+        </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    </div>
 
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <script>
+       /*  function guardarData() {
+            const nombreValue = $("#nombre").val();
+            const emailValue = $("#email").val();
+            const telValue = $("#telefono").val();
+            if (nombreValue == "" || emailValue == "" || telValue == "") {
+                alert('Completa todo los campos');
+            } else {
+                window.location.href = './registrate-2.html?nombre=' + nombreValue + '&email=' + emailValue +
+                    '&telefono=' + telValue;
+            } 
+        }*/
+    </script>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
